# the-benevolent-dictators

./: .gitignore  README.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  tasks.py  xor_enconder.py
.github/workflows/: test.yaml
benevolent/: __main__.py  cli.py  conf.py  ocr.py  replacer.py  sub_cipher.py  translate_chunks.py  translator.py  web.py  web_uploads.py  writer.py  xor_enconder.py
docs/: cli.md  index.md
proto/: text_sub.py  text_sub_photo.py
test/: conftest.py  test_click_commands.py  test_ocr.py  test_replacer.py  test_start.py  test_sub_cipher.py  test_translate_chunks.py  test_writer.py  test_xor_encoder.py  utils.py
test/ciphers/: seeded_1234.cipher  simple_sub_01.cipher
test/test_click_commands/: test_benevolens.py  test_click_commands.py  test_sub_cipher_commands.py  test_writer_commands.py  test_xor_commands.py
